# barkus

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  LICENSE-3rdparty.csv  Makefile  NOTICE  README.md  go.mod
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/barkus-antlr/: Cargo.toml
crates/barkus-antlr/src/: lib.rs
crates/barkus-antlr/tests/: antlr_tests.rs  split_grammar_tests.rs
crates/barkus-arbitrary/: Cargo.toml
crates/barkus-cli/: Cargo.toml
crates/barkus-cli/src/: main.rs
crates/barkus-core/: Cargo.toml
crates/barkus-core/benches/: core_benchmarks.rs
crates/barkus-core/src/: ast.rs  error.rs  generate.rs  hooks.rs  lib.rs  profile.rs
crates/barkus-core/src/ir/: analysis.rs  grammar.rs  ids.rs  mod.rs  validate.rs
crates/barkus-core/src/mutation/: fragment_db.rs  meta.rs  mod.rs  ops.rs
crates/barkus-core/src/tape/: map.rs  mod.rs
crates/barkus-core/tests/: generate_tests.rs  hook_tests.rs  ir_tests.rs  locality_tests.rs  mutation_tests.rs  profile_tests.rs  tape_tests.rs
crates/barkus-ebnf/: Cargo.toml
crates/barkus-ebnf/src/: lib.rs
crates/barkus-ebnf/tests/: parse_tests.rs
crates/barkus-ffi/: Cargo.toml
crates/barkus-ffi/src/: lib.rs
crates/barkus-libafl/: Cargo.toml
crates/barkus-parser-common/: Cargo.toml
crates/barkus-parser-common/src/: error.rs  ir_builder.rs  lib.rs  raw.rs  test_helpers.rs  tokenizer.rs
crates/barkus-peg/: Cargo.toml
crates/barkus-peg/src/: lib.rs
crates/barkus-peg/tests/: peg_tests.rs
crates/barkus-proto/: Cargo.toml
crates/barkus-sql/: Cargo.toml  README.md
crates/barkus-sql/src/: context.rs  dialect.rs  hooks.rs  lib.rs
crates/barkus-sql/tests/: sql_tests.rs
crates/barkus-viz/: Cargo.toml  README.md
crates/barkus-viz/src/: corpus.rs  html.rs  json.rs  lib.rs  main.rs  reachability.rs  recommend.rs  stats.rs  text.rs
docs/adr/: 0001-normalized-intermediate-representation.md  0002-decision-tape-and-havoc-paradox.md  0003-grammar-frontend-architecture.md  0004-structure-aware-mutation-strategy.md  0005-fuzzer-integration-architecture.md  0006-crate-structure.md  0007-configuration-and-profiles.md  0008-sql-semantic-generation-layer.md  0009-testing-strategy.md  0010-sans-io-and-tiger-style.md  0011-semantic-hook-architecture.md  0012-antlr-split-grammar-token-pools.md
fixtures/grammars/: arithmetic.ebnf  arithmetic.peg  csv.ebnf  json.ebnf  json.g4  ottl.ebnf  ottl.peg  sql-select.ebnf  url.ebnf
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_antlr_compile.rs  fuzz_ebnf_compile.rs  fuzz_mutation.rs  fuzz_peg_compile.rs  fuzz_tape_decode.rs
go/cmd/barkus-gen/: main.go
go/pkg/barkus/: barkus.go  barkus_test.go  sql.go  sql_test.go
grammars/antlr-sql/: SOURCE.md  update.sh
grammars/antlr-sql/postgresql/: LICENSE
grammars/antlr-sql/sqlite/: LICENSE
