[package]
name = "barkus-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "barkus-cli"
path = "src/main.rs"

[dependencies]
barkus-antlr = { path = "../barkus-antlr" }
barkus-core = { path = "../barkus-core" }
barkus-ebnf = { path = "../barkus-ebnf" }
barkus-peg = { path = "../barkus-peg" }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
