[package]
name = "barkus-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
barkus-core = { path = "../barkus-core" }
barkus-ebnf = { path = "../barkus-ebnf" }
barkus-sql = { path = "../barkus-sql" }
barkus-antlr = { path = "../barkus-antlr" }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
