[package]
name = "barkus-sql"
version = "0.1.0"
edition = "2021"

[dependencies]
barkus-core = { path = "../barkus-core" }
barkus-antlr = { path = "../barkus-antlr" }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
sqlparser = "0.61"
