[package]
name = "barkus-viz"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "barkus-viz"
path = "src/main.rs"

[dependencies]
barkus-core  = { path = "../barkus-core" }
barkus-ebnf  = { path = "../barkus-ebnf" }
barkus-antlr = { path = "../barkus-antlr" }
barkus-peg   = { path = "../barkus-peg" }
clap         = { version = "4", features = ["derive"] }
rand         = { version = "0.8", features = ["small_rng"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
opener       = "0.7"
