[package]
name = "barkus-viz"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "barkus-viz"
path = "src/main.rs"

[dependencies]
barkus-core  = { path = "../barkus-core" }
barkus-ebnf  = { path = "../barkus-ebnf" }
barkus-antlr = { path = "../barkus-antlr" }
barkus-peg   = { path = "../barkus-peg" }
clap         = { version = "4", features = ["derive"] }
rand         = "0.10"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
opener       = "0.8"

[dev-dependencies]
tempfile = "3"
